assets/css/base/base.css
:root {
  color-scheme: light dark;

  /* credit: https://modernfontstacks.com/ */
  --font-family: Avenir, Montserrat, Corbel, "URW Gothic", source-sans-pro,
    sans-serif;
  --font-family-monospace: ui-monospace, "Cascadia Code", "Source Code Pro",
    Menlo, Consolas, "DejaVu Sans Mono", monospace;

  --color-white: #fff;
  --color-off-white: #f8f6f4;
  --color-off-white-2: #f5f2ef;
  --color-off-white-3: #f6e5dd;

  --color-gray-10: #f2f2f2;
  --color-gray-20: #e0e0e0;
  --color-gray-50: #c0c0c0;
  --color-gray-90: #141414;

  --color-blue: #00529d;
  --color-blue-2: #013e76;
  --color-blue-3: #012445;

  --color-orange: #e68933;
  --color-orange-2: #ffa047;
  --color-orange-3: #efc94c;

  --color-turquoise: #307b6c;
  --color-turquoise-dark: #334D5C;
  --color-turquoise-light: #45b29d;

  --color-accent: var(--color-blue);
  --color-accent-focus: var(--color-blue-3);
  --color-accent-secondary: var(--color-blue-3);
  --color-accent-invert: var(--color-white);
  --color-accent-bg: transparent;
  --color-accent-bg-hover: #add5fa;

  --background-color: var(--color-off-white);
  --background-color-secondary: var(--color-off-white-3);

  --text-color: var(--color-gray-90);
  --text-color-link: var(--color-accent);
  --text-color-link-active: var(--color-accent-secondary);
  --text-color-link-visited: var(--color-accent-secondary);

  /* type scale ratio: 1.25 */
  --text-size-md: 1.25rem; /* 20px */
  --text-size-sm: 1rem; /* 16px */
  --text-size-xsm: 0.8125rem; /* 13px */
  --text-size-h1: 3.8125rem; /* 61px */
  --text-size-h2: 3rem; /* 48px */
  --text-size-h3: 2.4375rem; /* 39px */
  --text-size-h4: 1.953125rem; /* 31.25px */
  --text-size-h5: 1.5625rem; /* 25px */

  --line-height-body: 1.65;
  --line-height-heading: 1.15;

  --padding: 1.5rem;
  --padding-md: 2rem;
  --padding-lg: 4rem;

  --spacing-xxs: 4px;
  --spacing-xs: 8px;
  --spacing-sm: 12px;
  --spacing-md: 16px;
  --spacing-mmd: 24px;
  --spacing-lg: 32px;
  --spacing-xl: 48px;
  --spacing-xxl: 64px;
  --spacing-xxxl: 96px;

  --border-radius: 0.1875rem;

  --desktop-max-width: 60rem;
  --main-nav-height: 3.375rem;

  --focus-style-outline: outline: 0.15em solid var(--color-accent);
  --focus-style-box-shadow: 0 0 0 4px var(--color-accent);
  --focus-style-button-box-shadow: 0 0 0 6px var(--color-accent);
}

@media screen and (min-width: 46.75rem) {
  :root {
    --main-nav-height: 4.375rem;
  }
}

@media (prefers-color-scheme: dark) {
  :root {
    --color-accent: var(--color-orange);
    --color-accent-focus: var(--color-orange-2);
    --color-accent-secondary: var(--color-orange-3);
    --color-accent-invert: var(--color-blue-3);
    --color-accent-bg: #3c2a1f;
    --color-accent-bg-hover: rgba(230, 137, 51, 0.12);

    --background-color: #222;
    --background-color-secondary: #1e1810;

    --text-color: var(--color-gray-10);
  }
}

html,
body {
  background-color: var(--background-color);
}

html {
  overflow-y: scroll;
}

body {
  font-family: var(--font-family);
  font-size: var(--text-size-md);
  font-weight: normal;
  text-rendering: optimizeLegibility;
  color: var(--text-color);
  line-height: var(--line-height-body);
  overflow-x: hidden;
  accent-color: var(--color-accent);
}

header,
main,
footer {
  margin: 0 auto;
}

main {
  max-width: var(--desktop-max-width);
  padding: var(--padding-lg) var(--padding);
}

main:first-child {
  margin-top: 0;
}

h1,
h2,
h3,
h4,
h5 {
  margin-top: var(--spacing-lg);
  margin-bottom: var(--spacing-md);
  line-height: var(--line-height-heading);
}

h1 {
  font-size: var(--text-size-h1);
  margin-top: 0;
  margin-bottom: var(--spacing-xl);
}

h2 {
  margin-top: var(--spacing-xl);
  font-size: var(--text-size-h2);
}

h3 {
  font-size: var(--text-size-h3);
}

h4 {
  font-size: var(--text-size-h4);
}

h5 {
  font-size: var(--text-size-h5);
}

p {
  max-width: 75ch;
  margin-bottom: var(--spacing-mmd);
}

p:last-child {
  margin-bottom: 0;
}

caption,
figcaption {
  font-size: var(--text-size-sm);
}

small {
  font-size: var(--text-size-xsm);
}

:where([href]) {
  color: var(--text-color-link);
  text-decoration-skip-ink: auto;
  text-decoration-thickness: 0.125rem;
  text-underline-offset: 0.2em;
  transition: text-decoration-thickness 0.25s ease-in;
}

:where(a[href]:visited) {
  color: var(--text-color-link-visited);
}

:where(a[href]:active) {
  color: var(--text-color-link-active);
}

:where(a[href]:hover, a[href]:focus) {
  color: var(--color-accent-focus);
  outline: none;
  text-decoration-thickness: 0.5rem;
}

pre,
code {
  font-family: var(--font-family-monospace);
}

pre:not([class*="language-"]) {
  margin: 0.5em 0;
  line-height: 1.375; /* 22px /16 */
  -moz-tab-size: var(--syntax-tab-size);
  -o-tab-size: var(--syntax-tab-size);
  tab-size: var(--syntax-tab-size);
  -webkit-hyphens: none;
  -ms-hyphens: none;
  hyphens: none;
  direction: ltr;
  text-align: left;
  white-space: pre;
  word-spacing: normal;
  word-break: normal;
}

code {
  word-break: break-word;
}

dl > div {
  display: flex;
  align-items: baseline;
  gap: 1rem;
  line-height: 1.75;
}

:where(dl),
:where(ul),
:where(ol) {
  margin-bottom: var(--spacing-mmd);
}

:where([role="list"]) {
  padding: 0;
}

:where([role="list"]) li {
  list-style: none;
}

ul.inline,
ol.inline {
  display: flex;
  align-items: baseline;
  gap: var(--gap, 0.75rem);
}

